# block-oracle

./: .dockerignore  .gitignore  665.bundle.js  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT.txt  README.md  TODO.md  app.bundle.js  cloudbuild.staging.mainnet.yaml  cloudbuild.testnet.goerli.yaml  cloudbuild.yaml  context.md  editor.worker.js  index.html  json.worker.bundle.js  json.worker.js  node_modules_monaco-editor_esm_vs_basic-languages_apex_apex_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_azcli_azcli_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_bat_bat_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_bicep_bicep_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_cameligo_cameligo_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_coffee_coffee_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_cpp_cpp_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_csharp_csharp_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_csp_csp_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_css_css_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_cypher_cypher_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_dart_dart_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_dockerfile_dockerfile_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_ecl_ecl_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_flow9_flow9_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_fsharp_fsharp_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_go_go_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_graphql_graphql_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_hcl_hcl_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_html_html_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_ini_ini_js.bundle.js  node_modules_monaco-editor_esm_vs_basic-languages_java_java_js.bundle.js  (+60 more)
.github/workflows/: encoding.yml  oracle.yml  subgraph.yml  web-encoder.yml
.local/: .overmind.env  Procfile  README.md  block-oracle.sh  deploy-contract.sh  deploy-network.sh  deploy-subgraph.sh  graph-node.sh  hardhat-set-interval.json  hardhat.sh  ipfs.sh  postgres.sh  prelude.sh  run.sh
crates/encoding/: Cargo.toml
crates/encoding/src/: lib.rs  merkle.rs  messages.rs  serialize.rs
crates/json-encoder-web/: Cargo.toml  index.html  index.ts  package-lock.json  package.json  webpack.config.js
crates/json-oracle-encoder/: Cargo.toml
crates/oracle/: Cargo.toml  build.rs  config.staging.goerli.toml  config.staging.mainnet.toml  config.staging.toml
crates/oracle-encoder/: Cargo.toml
crates/oracle/config/dev/: block-oracle.sh  config.toml  hardhat.sh
crates/oracle/config/prod/: config.toml
crates/oracle/config/staging/: config.toml
crates/oracle/config/test/: config.sample.toml  indexed_chain_provider_via_env_var.toml  invalid_jrpc_provider_url.toml
crates/oracle/docs/: adding-a-new-indexed-chain.org  decoding-errors-and-transaction-monitoring.org  decoding-errors.org  event-sourcing.org  subgraph-freshness.org  subgraph-state-tracker.org  transaction-monitoring.md  transaction-monitoring.org
crates/oracle/docs/graphviz/: event_sourcing.dot  event_sourcing_transport_errors.dot  subgraph_freshness.dot  subgraph_freshness_detail.dot  subgraph_freshness_overview.dot  subgraph_state_tracker.dot  test.dot  transaction_monitoring.dot  trigger_message.dot
crates/oracle/message-examples/: 01-empty-blocknums.json  02-register-networks-and-set-block-numbers-same-payload.json  03-register-networks-and-set-block-numbers.json  04-register-multiple-and-set-block-numbers-thrice.json  05-register-multiple-and-unregister.json  06-correct-last-epoch.json
crates/oracle/message-examples/jsonnet-examples/: 01-empty-blocknums.jsonnet  03-register-networks-and-set-block-numbers.jsonnet  04-register-multiple-and-set-block-numbers-thrice.jsonnet  05-register-multiple-and-unregister.jsonnet  06-register-networks-and-change-ownership.jsonnet  messages.libsonnet
crates/oracle/proto/sf/blockmeta/v2/: blockmeta.proto
crates/oracle/src/: chain_validation.rs  config.rs  contracts.rs  ctrlc.rs  diagnostics.rs  emitter.rs  encoder.rs  epoch_tracker.rs  error_handling.rs  event_source.rs  indexed_chain.rs  jrpc_utils.rs  jsonrpc_utils.rs  lib.rs  main.rs  metrics.rs  models.rs  networks.rs  networks_diff.rs  oracle.rs  protocol_chain.rs  subgraph.rs  subgraph_state.rs  transport.rs
crates/oracle/src/abi/: EpochManager.json  data_edge.json
crates/oracle/src/blockmeta/: blockmeta_client.rs
crates/oracle/src/commands/: correct_epoch.rs  current_epoch.rs  mod.rs  send_message.rs
crates/oracle/src/graphql/: last_payload.graphql  query.graphql  schema.graphql
crates/oracle/src/resources/: test-response-subgraph-with-data.json
crates/oracle/src/runner/: ctrlc.rs  diagnostics.rs  error_handling.rs  jrpc_utils.rs  mod.rs  oracle.rs  transaction_monitor.rs
crates/oracle/src/store/: mod.rs  models.rs  store.rs
crates/oracle/test/config/: config.sample.toml  indexed_chain_provider_via_env_var.toml  invalid_grpc_provider_url.toml  invalid_jrpc_provider_url.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: contracts.rs  epoch_manager.rs  main.rs  message_samples.rs
docker/: Dockerfile  block-oracle.deployment.yaml
k8s/: Dockerfile  block-oracle.deployment.staging.goerli.yaml  block-oracle.deployment.staging.mainnet.yaml  block-oracle.deployment.yaml
xtask/: Cargo.toml
(+31 files in other folders)
