[package]
name = "epoch-encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
never = "0.1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
zigzag = "0.1.0"

[dev-dependencies]
tokio = { version = "1.14", features = ["sync", "parking_lot", "rt", "macros"] }
