[package]
name = "json-encoder-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# https://github.com/rust-random/getrandom/issues/208
getrandom = { version = "0.2", features = ["js"] }
json-oracle-encoder = { path = "../json-oracle-encoder" }
serde_json = "1"
wasm-bindgen = "0.2.74"
