[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
xshell = "0.2.2"
glob = "0.3.0"
web3 = "0.18.0"
toml = "0.5.9"
epoch-encoding = { path = "../encoding" }
block-oracle = { path = "../oracle" }

[dependencies.clap]
version = "3.1.18"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros", "sync"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.url]
version = "2"
features = ["serde"]
